--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,8 @@
   -webkit-box-sizing: border-box; }
 
 /*** SELECTOR ***/
+#selector { background: papayawhip; }
+
 #selector h1 {
   text-align: center;
   font-size: 3.5em;
@@ -19,6 +21,7 @@
 /* selector buttons */
 .filter-btn {
   color: var(--mainDarkBlue) !important;
+  background: white;
   border: 2px solid var(--mainDarkBlue) !important;
   box-shadow: 2px 2px 2px var(--mainBlack);
   font-weight: bold;
